@@ -505,6 +505,9 @@ class PDBWriter(base.WriterBase):
     keywords are written out accordingly. Otherwise, the ATOM_ record type
     is the default output.
 
+    The CONECT_ record is written out, if required, when the output stream
+    is closed.
+
     See Also
     --------
     This class is identical to :class:`MultiPDBWriter` with the one
@@ -658,9 +661,16 @@ class PDBWriter(base.WriterBase):
         self.first_frame_done = False
 
     def close(self):
-        """Close PDB file and write END record"""
+        """
+        Close PDB file and write CONECT and END record
+
+
+        .. versionchanged:: 2.0.0
+           CONECT_ record written just before END_ record
+        """
         if hasattr(self, 'pdbfile') and self.pdbfile is not None:
             if not self.has_END:
+                self._write_pdb_bonds()
                 self.END()
             else:
                 logger.warning("END record has already been written"
@@ -797,7 +807,9 @@ class PDBWriter(base.WriterBase):
         if self.bonds is None:
             return
 
-        if not self.obj or not hasattr(self.obj.universe, 'bonds'):
+        if (not hasattr(self, "obj") or
+                not self.obj or
+                not hasattr(self.obj.universe, 'bonds')):
             return
 
         bondset = set(itertools.chain(*(a.bonds for a in self.obj.atoms)))
@@ -898,8 +910,7 @@ class PDBWriter(base.WriterBase):
         # write_all_timesteps() to dump everything in one go, or do the
         # traditional loop over frames
         self._write_next_frame(self.ts, multiframe=self._multiframe)
-        self._write_pdb_bonds()
-        # END record is written when file is being close()d
+        # END and CONECT records are written when file is being close()d
 
     def write_all_timesteps(self, obj):
         """Write all timesteps associated with *obj* to the PDB file.
@@ -922,8 +933,12 @@ class PDBWriter(base.WriterBase):
 
         will be writing frames 12, 14, 16, ...
 
+
         .. versionchanged:: 0.11.0
            Frames now 0-based instead of 1-based
+
+        .. versionchanged:: 2.0.0
+           CONECT_ record moved to :meth:`close`
         """
 
         self._update_frame(obj)
@@ -942,7 +957,7 @@ class PDBWriter(base.WriterBase):
             traj[framenumber]
             self._write_next_frame(self.ts, multiframe=True)
 
-        self._write_pdb_bonds()
+        # CONECT record is written when the file is being close()d
         self.close()
 
         # Set the trajectory to the starting position
